update CSS and HTML files

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section class="bus-list">
         <div class="bus-list-item">
             <div class="bus-data-line1">
-              <div class="bus-icon">
+              <div class="bus-icon-east">
                 <i class="fas fa-bus"></i>
               </div>
               <h2>60</h2>
@@ -46,7 +46,7 @@
 
         <div class="bus-list-item">
             <div class="bus-data-line1">
-              <div class="bus-icon">
+              <div class="bus-icon-north">
                 <i class="fas fa-bus"></i>
               </div>
                 <h2>151</h2>
@@ -63,7 +63,7 @@
 
         <div class="bus-list-item">
             <div class="bus-data-line1">
-              <div class="bus-icon">
+              <div class="bus-icon-south">
                 <i class="fas fa-bus"></i>
               </div>
                 <h2>J14</h2>
@@ -80,7 +80,7 @@
 
         <div class="bus-list-item">
             <div class="bus-data-line1">
-              <div class="bus-icon">
+              <div class="bus-icon-east">
                 <i class="fas fa-bus"></i>
               </div>
                 <h2>124</h2>
@@ -114,7 +114,7 @@
 
         <div class="bus-list-item">
             <div class="bus-data-line1">
-              <div class="bus-icon">
+              <div class="bus-icon-south">
                 <i class="fas fa-bus"></i>
               </div>
                 <h2>124</h2>
