update HTML file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav>
       <div class="status-bar">
-        <img src="../images/status_bar.png">
+        <img src="images/status_bar.png">
       </div>
       <div class="arrow-left">
         <i class="fas fa-chevron-left"></i>
@@ -24,7 +24,7 @@
 
     <div class="content">
       <div class="map">
-        <img src="../images/BusStopDisplay.png">
+        <img src="images/BusStopDisplay.png">
       </div>
       <section class="bus-list">
         <div class="bus-list-item">
