update HTML and CSS files

--- a/stopinfo.html
+++ b/stopinfo.html
@@ -47,7 +47,7 @@
         You are .6 miles away
         <br>
 
-        This stop services 7 bus stops
+        This stop services 7 bus lines
       </section>
 
     </main>
