update CSS and HTML file

--- a/buslist.html
+++ b/buslist.html
@@ -30,108 +30,110 @@
       <section class="map">
         <img src="images/BusStopDisplay.png">
       </section>
+
       <section class="bus-list">
-        <div class="bus-list-item">
-            <li class="bus-data-line1">
-              <div class="bus-icon-east">
-                <i class="fas fa-bus"></i>
-              </div>
+        <ul>
+        <li class="bus-list-item">
+            <div class="bus-data-line1">
               <h2>60</h2>
+              <div class="icon-east">
+                <i class="fas fa-location-arrow"></i>
+              </div>
               <div class="time">
                 <h3>2</h3>
                 <h4>min</h4>
               </div>
-            </li>
-            <li class="bus-data-line2">
+            </div>
+            <div class="bus-data-line2">
               <h5>Randolph/Harbor Dr</h5>
               <h6>and in 22, 42 minutes</h6>
-            </li>
-        </div>
+            </div>
+        </li>
 
-        <div class="bus-list-item">
-            <li class="bus-data-line1">
-              <div class="bus-icon-north">
-                <i class="fas fa-bus"></i>
-              </div>
+        <li class="bus-list-item">
+            <div class="bus-data-line1">
                 <h2>151</h2>
+                <div class="icon-north">
+                  <i class="fas fa-location-arrow"></i>
+                </div>
               <div class="time">
                 <h3>3</h3>
                 <h4>min</h4>
               </div>
-            </li>
-            <li class="bus-data-line2">
+            </div>
+            <div class="bus-data-line2">
               <h5>Devon/Clark</h5>
               <h6>and in 19, 25 minutes</h6>
-            </li>
-        </div>
+            </div>
+        </li>
 
-        <div class="bus-list-item">
-            <li class="bus-data-line1">
-              <div class="bus-icon-south">
-                <i class="fas fa-bus"></i>
-              </div>
+        <li class="bus-list-item">
+            <div class="bus-data-line1">
                 <h2>J14</h2>
+                <div class="icon-south">
+                  <i class="fas fa-location-arrow"></i>
+                </div>
               <div class="time">
                 <h3>5</h3>
                 <h4>min</h4>
               </div>
-            </li>
-            <li class="bus-data-line2">
+            </div>
+            <div class="bus-data-line2">
               <h5>103rd/Stony Island</h5>
               <h6>and in 20, 35 minutes</h6>
-            </li>
-        </div>
+            </div>
+        </li>
 
-        <div class="bus-list-item">
-            <li class="bus-data-line1">
-              <div class="bus-icon-east">
-                <i class="fas fa-bus"></i>
-              </div>
+        <li class="bus-list-item">
+            <div class="bus-data-line1">
                 <h2>124</h2>
+                <div class="icon-east">
+                  <i class="fas fa-location-arrow"></i>
+                </div>
               <div class="time">
                 <h3>7</h3>
                 <h4>min</h4>
               </div>
-            </li>
-            <li class="bus-data-line2">
+            </div>
+            <div class="bus-data-line2">
               <h5>Navy Pier</h5>
               <h6>and in 17, 27 minutes</h6>
-            </li>
-        </div>
+            </div>
+        </li>
 
-        <div class="bus-list-item">
-            <li class="bus-data-line1">
-              <div class="bus-icon">
-                <i class="fas fa-bus"></i>
-              </div>
+        <li class="bus-list-item">
+            <div class="bus-data-line1">
                 <h2>6x</h2>
+                <div class="reroute">
+                  <h6>REROUTE</h6>
+                </div>
               <div class="time">
                 <h3>10</h3>
                 <h4>min</h4>
               </div>
-            </li>
-            <li class="bus-data-line2">
-              <h5>Jackson Park Resource</h5>
-              <h6>REROUTE</h6>
-            </li>
-        </div>
-
-        <div class="bus-list-item">
-            <li class="bus-data-line1">
-              <div class="bus-icon-south">
-                <i class="fas fa-bus"></i>
               </div>
+            <div class="bus-data-line2">
+              <h5>Jackson Park Resource</h5>
+            </div>
+        </li>
+
+
+        <li class="bus-list-item">
+            <div class="bus-data-line1">
                 <h2>124</h2>
+                <div class="icon-south">
+                  <i class="fas fa-location-arrow"></i>
+                </div>
               <div class="time">
                 <h3>13</h3>
                 <h4>min</h4>
               </div>
-            </li>
-            <li class="bus-data-line2">
+            </div>
+            <div class="bus-data-line2">
               <h5>Navy Pier</h5>
-              <h6>and in 23, 33 minute</h6>
-            </li>
-        </div>
+              <h6>and in 23, 33 minutes</h6>
+            </div>
+        </li>
 
         <a href="outofservice.html"><button class="warning-button">
           <div class="warning">
@@ -139,7 +141,7 @@
           </div>
           OUT OF SERVICE BUSES
         </button></a>
-
+      </ul>
       </section>
     </main>
   </body>
